Made that the first actor seen is the one we target at.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4163,6 +4163,15 @@ Decorator_DistanceTo_C.Condition=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
 Decorator_DistanceTo_C.Default=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+Service_SelectATargetActor_C.Description=True
+Service_SelectATargetActor_C.Service=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -4171,6 +4180,7 @@ OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4360,7 +4370,7 @@ FloatProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.Generator.ProjectionData\" "
+Object=
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4380,7 +4390,7 @@ SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bo
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -4406,7 +4416,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4484,7 +4494,7 @@ EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSl
 EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
-EnvQueryNode="\"Object.Generator.ProjectionData\" "
+EnvQueryNode=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -4510,13 +4520,14 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
-EnvQueryTest="\"Object.Trace.TraceData\" "
+EnvQueryTest=
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
 BTTask_BlackboardBase=
 BTTaskNode=
 BTNode=
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
@@ -4541,26 +4552,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BT_AIPlayer
-MRUItem1=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem2=/Game/AdvancedAI/EQS_FindTarget
-MRUItem3=/Game/Level/maps/VoidMap
-MRUItem4=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem5=/Game/AdvancedAI/BP_AIPlayer
-MRUItem6=/Game/AdvancedAI/BB_AIPlayer
-MRUItem7=/Game/Level/maps/TestMap
-MRUItem8=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem9=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem10=/Game/AdvancedAI/EQS_Trash
-MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem13=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem14=/Game/AdvancedAI/BP_AI
-MRUItem15=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem16=/Game/Level/maps/Wimbledon
-MRUItem17=/Game/Level/maps/Blockout_P
-MRUItem18=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem19=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem0=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem1=/Game/AdvancedAI/BT_AIPlayer
+MRUItem2=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem3=/Game/AdvancedAI/EQS_FindTarget
+MRUItem4=/Game/Level/maps/VoidMap
+MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem6=/Game/AdvancedAI/BP_AIPlayer
+MRUItem7=/Game/AdvancedAI/BB_AIPlayer
+MRUItem8=/Game/Level/maps/TestMap
+MRUItem9=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem10=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem11=/Game/AdvancedAI/EQS_Trash
+MRUItem12=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem13=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem14=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem15=/Game/AdvancedAI/BP_AI
+MRUItem16=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem17=/Game/Level/maps/Wimbledon
+MRUItem18=/Game/Level/maps/Blockout_P
+MRUItem19=/Game/Blueprints/GameModes/BP_TestGameState
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
