Created a EQS to find the nearest player.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4384,7 +4384,7 @@ FloatProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+Object=
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4567,26 +4567,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem1=/Game/AdvancedAI/BT_AIPlayer
-MRUItem2=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem3=/Game/AdvancedAI/EQS_FindTarget
-MRUItem4=/Game/Level/maps/VoidMap
-MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem6=/Game/AdvancedAI/BP_AIPlayer
-MRUItem7=/Game/AdvancedAI/BB_AIPlayer
-MRUItem8=/Game/Level/maps/TestMap
-MRUItem9=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem10=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem11=/Game/AdvancedAI/EQS_Trash
-MRUItem12=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem13=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem14=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem15=/Game/AdvancedAI/BP_AI
-MRUItem16=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem17=/Game/Level/maps/Wimbledon
-MRUItem18=/Game/Level/maps/Blockout_P
-MRUItem19=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem0=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem1=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem2=/Game/AdvancedAI/BT_AIPlayer
+MRUItem3=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem4=/Game/AdvancedAI/EQS_FindTarget
+MRUItem5=/Game/Level/maps/VoidMap
+MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem7=/Game/AdvancedAI/BP_AIPlayer
+MRUItem8=/Game/AdvancedAI/BB_AIPlayer
+MRUItem9=/Game/Level/maps/TestMap
+MRUItem10=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem11=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem12=/Game/AdvancedAI/EQS_Trash
+MRUItem13=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem15=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem16=/Game/AdvancedAI/BP_AI
+MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem18=/Game/Level/maps/Wimbledon
+MRUItem19=/Game/Level/maps/Blockout_P
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
