Made startFire and endFire accessible through blueprints.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4223,13 +4223,14 @@ Character.Character=True
 Character.Materials=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_NearestPlayer.EQS_NearestPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4262,7 +4263,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Level/maps
+ContentBrowserTab1.SelectedPaths=/Game/weaponEffects
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4573,8 +4574,8 @@ EnvQueryTest=
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
-BTTask_BlackboardBase="\"Object.EQS.EQSRequest\" "
-BTTaskNode="\"Object.EQS.EQSRequest\" "
+BTTask_BlackboardBase=
+BTTaskNode=
 BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 REINST_BP_AIPlayer_C_210="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4602,26 +4603,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem1=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem2=/Game/AdvancedAI/BT_AIPlayer
-MRUItem3=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem4=/Game/AdvancedAI/EQS_FindTarget
-MRUItem5=/Game/Level/maps/VoidMap
-MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem7=/Game/AdvancedAI/BP_AIPlayer
-MRUItem8=/Game/AdvancedAI/BB_AIPlayer
-MRUItem9=/Game/Level/maps/TestMap
-MRUItem10=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem11=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem12=/Game/AdvancedAI/EQS_Trash
-MRUItem13=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem15=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem16=/Game/AdvancedAI/BP_AI
-MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem18=/Game/Level/maps/Wimbledon
-MRUItem19=/Game/Level/maps/Blockout_P
+MRUItem0=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem1=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem2=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem3=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem5=/Game/AdvancedAI/BT_AIPlayer
+MRUItem6=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem7=/Game/AdvancedAI/EQS_FindTarget
+MRUItem8=/Game/Level/maps/VoidMap
+MRUItem9=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem10=/Game/AdvancedAI/BP_AIPlayer
+MRUItem11=/Game/AdvancedAI/BB_AIPlayer
+MRUItem12=/Game/Level/maps/TestMap
+MRUItem13=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem14=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem15=/Game/AdvancedAI/EQS_Trash
+MRUItem16=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem18=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem19=/Game/AdvancedAI/BP_AI
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4708,6 +4709,9 @@ MRUItem19=/Game/Level/maps/Blockout_P
 /Game/AdvancedAI/EQS_Trash.EQS_Trash=0
 /Game/AdvancedAI/EnvQueryContext_FindTarget.EnvQueryContext_FindTarget=0
 /Game/AdvancedAI/Decorator_DistanceTo.Decorator_DistanceTo=0
+/Game/weaponEffects/ShellEject/SM_ShellEject.SM_ShellEject=0
+/Game/weaponEffects/ShellEject/P_Rifle_ShellEject.P_Rifle_ShellEject=0
+/Game/weaponEffects/ShellEject/M_ShellEjectMetal.M_ShellEjectMetal=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
